# syntactical

./: .gitignore  CHANGELOG.md  LICENSE  README.md  TODO.md  build.bat  main.py  main.spec  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml
src/syntactical/: __init__.py  __main__.py  syntactical.py  version.py
src/syntactical.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
