[project]
name = "syntactical"
version = "2.1.0"
dependencies = [
    "asgiref==3.11.1",
    "attrs==25.4.0",
    "automat==25.4.16",
    "blinker==1.9.0",
    "build==1.4.0",
    "buildtools==1.0.6",
    "certifi==2026.1.4",
    "cffi==2.0.0",
    "charset-normalizer==3.4.4",
    "click==8.3.1",
    "colorama==0.4.6",
    "constantly==23.10.4",
    "contourpy==1.3.3",
    "cryptography==46.0.5",
    "cycler==0.12.1",
    "django==6.0.2",
    "docopt==0.6.2",
    "docutils==0.22.4",
    "flask==3.1.2",
    "fonttools==4.61.1",
    "furl==2.1.4",
    "greenlet==3.3.1",
    "hyperlink==21.0.0",
    "id==1.6.1",
    "idna==3.11",
    "incremental==24.11.0",
    "itsdangerous==2.2.0",
    "jaraco-classes==3.4.0",
    "jaraco-context==6.1.0",
    "jaraco-functools==4.4.0",
    "jinja2==3.1.6",
    "keyboard==0.13.5",
    "keyring==25.7.0",
    "kiwisolver==1.4.9",
    "lark==1.3.1",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.3",
    "matplotlib==3.10.8",
    "mdurl==0.1.2",
    "more-itertools==10.8.0",
    "nh3==0.3.2",
    "numpy==2.4.2",
    "orderedmultidict==1.0.2",
    "packaging==26.0",
    "pathlib==1.0.1",
    "pick==2.4.0",
    "pillow==12.1.1",
    "pycparser==3.0",
    "pygame==2.6.1",
    "pygments==2.19.2",
    "pynput==1.8.1",
    "pyparsing==3.3.2",
    "pyproject-hooks==1.2.0",
    "python-dateutil==2.9.0.post0",
    "pywin32-ctypes==0.2.3",
    "readme-renderer==44.0",
    "redo==3.0.0",
    "requests==2.32.5",
    "requests-toolbelt==1.0.0",
    "rfc3986==2.0.0",
    "rich==14.3.2",
    "setuptools==82.0.0",
    "simplejson==3.20.2",
    "six==1.17.0",
    "sqlalchemy==2.0.46",
    "sqlparse==0.5.5",
    "twine==6.2.0",
    "twisted==25.5.0",
    "typing-extensions==4.15.0",
    "tzdata==2025.3",
    "urllib3==2.6.3",
    "werkzeug==3.1.5",
    "wheel==0.46.3",
    "windows-curses==2.4.1",
    "zope-interface==8.2",
]
readme = "README.md"
description = "The Syntactical programming language's interpreter."

[project.scripts]
syntactical = "syntactical.syntactical:main"
syn = "syntactical.syntactical:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
