[project]
name = "syntactical"
version = "3.0.0"
dependencies = [
    "build==1.4.0",
    "colorama==0.4.6",
    "lark==1.3.1",
    "packaging==26.0",
    "pyproject_hooks==1.2.0"
]
readme = "README.md"
description = "The Syntactical programming language's interpreter."

[project.scripts]
syntactical = "syntactical.syntactical:main"
syn = "syntactical.syntactical:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
