[project]
name = "syntactical"
version = "3.3.3"
dependencies = [
    "build==1.4.0",
    "certifi==2026.2.25",
    "charset-normalizer==3.4.5",
    "colorama==0.4.6",
    "docutils==0.22.4",
    "id==1.6.1",
    "idna==3.11",
    "jaraco-classes==3.4.0",
    "jaraco-context==6.1.1",
    "jaraco-functools==4.4.0",
    "keyring==25.7.0",
    "lark==1.3.1",
    "markdown-it-py==4.0.0",
    "mdurl==0.1.2",
    "more-itertools==10.8.0",
    "nh3==0.3.3",
    "packaging==26.0",
    "pygments==2.19.2",
    "pyproject-hooks==1.2.0",
    "pywin32-ctypes==0.2.3",
    "readme-renderer==44.0",
    "requests==2.32.5",
    "requests-toolbelt==1.0.0",
    "rfc3986==2.0.0",
    "rich==14.3.3",
    "twine==6.2.0",
    "urllib3==2.6.3",
]
readme = "README.md"
description = "The Syntactical programming language's interpreter."

[project.scripts]
syntactical = "syntactical.syntactical:main"
syn = "syntactical.syntactical:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
